# survey

./: Cargo.toml  raw.html  script.js  script.ts  survey.html  نظرسنجی.docx
src/: main.rs
static/: index.html  script.js  success.html
