[package]
name = "survey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web="4.4"
serde = {version = "1.0", fautures = ["derive"] }
chrono = {version = "0.4", feautures = ["serde"]}
env_logger = "0.10"
urlencoding = "2.1"
log = "0.4"


